syntax = "proto3";

package auth;
option go_package = "./authorization";

message AuthorizationAuthServiceRequest {
  string token = 1;
}

message AuthorizationAuthServiceResponse {
  int64 id = 1;
  string email = 2;
  string role = 3;
  string token = 4;
  string expired_datetime = 5;
}

service AuthorizationService {
  rpc GetSessionServiceAuth(AuthorizationAuthServiceRequest) returns (AuthorizationAuthServiceResponse) {};
}
